--- a/style.css
+++ b/style.css
@@ -1,116 +1,230 @@
-
-.all{
-    margin-left: 5%;
-    margin-left: 5%;
-    margin-top: 5px;
-}
-a{
-    text-decoration: none;
-}
-.logo{
-    margin-right: 10px;
+body {
+    background-color: rgb(250, 250, 250);
 }
 
-.textmain{
-    position: relative;
-    margin-left: 13px;
-    bottom: 10px;
-    font-size: 13px;
-    color:black;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: lighter;
-}
-
-
-.newacc{
-    margin-left: 10px;
-    
-}
-.main{
-    width: 95%;
-    height: 500px;
-    background-color: aqua;
-    
-    
-    background:url(https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RWLAmj?ver=35aa&q=0&m=8&h=472&w=1259&b=%23FFFFFFFF&l=f&x=0&y=0&s=1898&d=712&aim=true);
-    background-repeat: no-repeat;
-    
-}
-.info{
-    width: 442px;
-    height: 50px;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px;
-    position: relative;
-    top:22%;
-    left:6%;
-
-}
-h2{
-    font-weight: 700;
-}
-.check-button{
-    margin-top: 8px;
-    background-color: #ffff;
-    color: black;
-    text-align: center;
-    border: none;
-    width: 258px;
-    height: 40px;
-    font-weight: 700;
-}
-a.textmain:hover{
-    border-bottom: 2px solid black;
-}
-a:active{
-    padding: 10px;
-    border: 1px dashed black;
-}
-.logo:active{
-    padding-top: 15px;
-}
-.check-button:hover{
-    text-decoration: underline;
-    padding-right: 25px;
-}
-.photoslinks{
+#form1 {
+    background-color: white;
     position: absolute;
-    left:89%;
-    bottom: 93%;
+    margin: auto;
+    text-align: center;
+    margin-left: 980px;
+    margin-top: 105px;
+    box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
+    border-width: 0.1px;
+    width: 350px;
+    height: 380px;
+    box-sizing: border-box;
+    padding-top: 40px;
 }
-select{
-    position: relative;
-    left: 40%;
-    border: none;
+
+#form2 {
+    background-color: white;
+    position: absolute;
+    margin: auto;
+    text-align: center;
+    box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
+    border-width: 0.1px;
+    margin-left: 980px;
+    margin-top: 500px;
+    width: 350px;
+    height: 63px;
+    padding-top: 10px;
+    box-sizing: border-box;
+    font-family: sans-serif;
+    font-size: 13px;
 }
-select:hover{
-    border-bottom: 2px solid black;
+
+input[type=text],
+input[type=password],
+button {
+    width: 260px;
+    height: 36px;
+    margin-top: 13px;
+    margin-right: 10px;
+    margin-left: 15px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    box-sizing: border-box;
+    padding: 9px 0px 7px 8px;
+    font-size: 12px;
+    background-color: #FAFAFA;
 }
-select:active{
-    padding: 10px;
-    border: 1px dashed black;
+
+#Button1 {
+    text-align: center;
+    width: 268px;
+    height: 33px;
+    background-color: rgb(0, 149, 246);
+    color: white;
+    font-size: 14px;
+    font-family: sans-serif;
+}
+
+#mm {
+    margin-left: -12px;
+}
+
+hr {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+}
+
+#phone {
+    position: absolute;
+    margin: auto;
+    text-align: center;
+    margin-left: 475px;
+    margin-top: 4%;
+    box-sizing: border-box;
+}
+
+.install {
+    position: absolute;
+    margin: auto;
+    text-align: center;
+    margin-left: 1000px;
+    margin-top: 575px;
+    box-sizing: border-box;
+    font-family: sans-serif;
+    font-size: 13px;
+}
+
+#inst {
+    margin-top: -10px;
+    background-image: url("https://www.instagram.com/static/bundles/es6/sprite_core_32f0a4f27407.png/32f0a4f27407.png");
+    width: 200px;
+    height: 50px;
+    background-position: 0 220px;
+    width: 275px;
+    height: 45px;
+}
+
+#InstLogo {
+    margin-top: -15px;
+    overflow: hidden;
+    width: 188px;
+    height: 55px;
+    background-position: 0px 273px;
+    margin: 0 auto;
+    background-image: url("https://www.instagram.com/static/bundles/es6/sprite_core_32f0a4f27407.png/32f0a4f27407.png");
+}
+
+.OR {
+    color: rgb(153, 156, 169);
+}
+
+a {
+
+    color: rgb(140, 141, 145);
     text-decoration: none;
 }
-.extrainfo{
-    width: 95%;
-    display: inline-flex;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
-    
+
+#FB {
+
+    color: rgb(61, 87, 139);
 }
-.extra1,.extra2,.extra3,.extra4{
-    width: 22%;
 
+#FBicon {
+    position: absolute;
+    margin: auto;
+    text-align: center;
+    margin-left: 1055px;
+    margin-top: 395px;
+    background-image: url("https://www.instagram.com/static/bundles/es6/sprite_core_32f0a4f27407.png/32f0a4f27407.png");
+    width: 18px;
+    height: 18px;
+    background-position: 18px 943px;
+}
+
+#Forget {
+    color: rgb(177, 180, 182);
+}
+
+#Reg {
+    color: rgb(20, 159, 248);
+}
+
+form .OR::before {
+    position: absolute;
+    content: '';
+    width: 100px;
+    height: 1px;
+    background: #b6b6b6;
+    left: 45px;
+    top: 67%;
+    transform: translateY(-50%);
+    border-radius: 50px;
+}
+
+form .OR::after {
+    position: absolute;
+    content: '';
+    width: 100px;
+    height: 1px;
+    background: #b6b6b6;
+    right: 45px;
+    top: 67%;
+    transform: translateY(-50%);
+    border-radius: 50px;
+}
+
+.install p {
+    margin-top: 4px;
+}
+
+.footer {
+    position: absolute;
+    text-align: center;
+    left: 125;
+    bottom: -90;
+    height: 24%;
+    width: 100%;
+    color: black;
 
 }
-.extra2,.extra3,.extra4{
-    width: 22%;
-    margin-left: 43px;
 
+.footer2 {
+    position: absolute;
+    text-align: center;
+    left: 134;
+    bottom: -114;
+    height: 24%;
+    width: 100%;
+    color: black;
 
 }
-.moreinfo{
-    font-weight: 600;
-    color: #3897f0;
+
+.footer3 {
+    position: absolute;
+    text-align: center;
+    left: 134;
+    bottom: -148;
+    height: 24%;
+    width: 100%;
+    color: black;
+
+}
+
+ul {
+    margin-top: 15px;
+    font-family: sans-serif;
+    font-size: 12px;
+    list-style: none;
+    margin-right: 330px;
+    color: rgb(140, 141, 145);
+}
+
+li {
+
+    display: inline;
+    color: rgb(140, 141, 145);
+    padding: 4px;
+    margin-bottom: 5px;
+}
+
+input:focus::placeholder {
+    position: absolute;
+    font-size: 11px;
+    transform: translateY(-10px);
 }
