--- a/style.css
+++ b/style.css
@@ -1,230 +1,208 @@
-body {
-    background-color: rgb(250, 250, 250);
-}
-
-#form1 {
-    background-color: white;
-    position: absolute;
-    margin: auto;
-    text-align: center;
-    margin-left: 980px;
-    margin-top: 105px;
-    box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
-    border-width: 0.1px;
-    width: 350px;
-    height: 380px;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    padding-top: 40px;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
-#form2 {
-    background-color: white;
-    position: absolute;
-    margin: auto;
-    text-align: center;
-    box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
-    border-width: 0.1px;
-    margin-left: 980px;
-    margin-top: 500px;
-    width: 350px;
-    height: 63px;
-    padding-top: 10px;
-    box-sizing: border-box;
-    font-family: sans-serif;
-    font-size: 13px;
-}
-
-input[type=text],
-input[type=password],
 button {
-    width: 260px;
-    height: 36px;
-    margin-top: 13px;
-    margin-right: 10px;
-    margin-left: 15px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    box-sizing: border-box;
-    padding: 9px 0px 7px 8px;
-    font-size: 12px;
-    background-color: #FAFAFA;
-}
-
-#Button1 {
-    text-align: center;
-    width: 268px;
-    height: 33px;
-    background-color: rgb(0, 149, 246);
-    color: white;
-    font-size: 14px;
-    font-family: sans-serif;
-}
-
-#mm {
-    margin-left: -12px;
-}
-
-hr {
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 10px;
-}
-
-#phone {
-    position: absolute;
-    margin: auto;
-    text-align: center;
-    margin-left: 475px;
-    margin-top: 4%;
-    box-sizing: border-box;
-}
-
-.install {
-    position: absolute;
-    margin: auto;
-    text-align: center;
-    margin-left: 1000px;
-    margin-top: 575px;
-    box-sizing: border-box;
-    font-family: sans-serif;
-    font-size: 13px;
-}
-
-#inst {
-    margin-top: -10px;
-    background-image: url("https://www.instagram.com/static/bundles/es6/sprite_core_32f0a4f27407.png/32f0a4f27407.png");
-    width: 200px;
-    height: 50px;
-    background-position: 0 220px;
-    width: 275px;
-    height: 45px;
-}
-
-#InstLogo {
-    margin-top: -15px;
-    overflow: hidden;
-    width: 188px;
-    height: 55px;
-    background-position: 0px 273px;
-    margin: 0 auto;
-    background-image: url("https://www.instagram.com/static/bundles/es6/sprite_core_32f0a4f27407.png/32f0a4f27407.png");
-}
-
-.OR {
-    color: rgb(153, 156, 169);
+    cursor: pointer;
 }
 
 a {
+    color: inherit;
+    text-decoration: inherit;
+}
 
-    color: rgb(140, 141, 145);
+.content-container {
+    padding: 0 400px;
+    background-color: #F0F2F5;
+}
+
+.main_content-container {
+    display: flex;
+    align-items: center;
+    gap: 100px;
+    height: 80vh;
+}
+
+.main_content-text_container {
+    width: 500px;
+}
+
+.company_name-title {
+    font-size: 60px;
+    font-weight: 700;
+    color: #1877F2;
+}
+
+.company_description-text {
+    color: #1C1E21;
+    font-size: 30px;
+}
+
+
+.form-container {
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 0 0 7px -4px;
+    width: 100%;
+    padding: 20px;
+    width: 450px;
+    margin: 0 auto;
+}
+
+.form-main_content-container {
+    border-bottom: 1px solid #DADDE1;
+    margin-bottom: 10px;
+}
+
+.form-email_input-field,
+.form-password_input-field {
+    width: 100%;
+    outline: none;
+    border: 1px solid #DDDFE2;
+    background: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    margin: 0 auto;
+    margin-bottom: 10px;
+}
+
+.form-email_input-field::placeholder,
+.form-password_input-field::placeholder {
+    font-size: 18px;
+    color: #90949C
+}
+
+.form-submit_button {
+    width: 100%;
+    font-size: 20px;
+    padding: 12.5px 0;
+    background-color: #1877F2;
+    color: #fff;
+    font-weight: 600;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    transition: 250ms ease;
+}
+
+.form-submit_button:hover {
+    background-color: #166FE5
+}
+
+.form-forgot_password-anchor {
+    text-decoration: none;
+    color: #188CF5;
+    margin: 20px 0;
+    display: block;
+    text-align: center;
+    font-size: 13px;
+}
+
+.form-create_new-button {
+    width: 70%;
+    border-radius: 5px;
+    color: white;
+    background-color: #42B72A;
+    padding: 12.5px 0;
+    margin: 0 auto;
+    font-weight: 600;
+    border: none;
+    outline: none;
+    font-size: 15px;
+    display: block;
+    transition: 250ms ease;
+}
+
+.form-create_new-button:hover {
+    background-color: #36a420;
+}
+
+.create_new_description-text {
+    width: 78.5%;
+    margin: 25px auto 0;
+    text-align: center;
+    display: block;
+    font-size: 14px;
+}
+
+.create_new_one {
+    text-decoration: none;
+    color: #000;
+    font-weight: 600;
+}
+
+.create_new_one:hover,
+.form-forgot_password-anchor:hover {
+    text-decoration: underline;
+}
+
+.languages-list {
+    display: flex;
+    list-style: none;
+    gap: 30px;
+    padding: 20px 0;
+}
+
+.languages-list>li {
+    color: #8A8D91;
+    font-size: 13px;
+}
+
+.languages-list>li>a {
     text-decoration: none;
 }
 
-#FB {
-
-    color: rgb(61, 87, 139);
+.languages-list>li>a:hover {
+    text-decoration: underline;
 }
 
-#FBicon {
-    position: absolute;
-    margin: auto;
-    text-align: center;
-    margin-left: 1055px;
-    margin-top: 395px;
-    background-image: url("https://www.instagram.com/static/bundles/es6/sprite_core_32f0a4f27407.png/32f0a4f27407.png");
-    width: 18px;
-    height: 18px;
-    background-position: 18px 943px;
-}
-
-#Forget {
-    color: rgb(177, 180, 182);
-}
-
-#Reg {
-    color: rgb(20, 159, 248);
-}
-
-form .OR::before {
-    position: absolute;
-    content: '';
-    width: 100px;
-    height: 1px;
-    background: #b6b6b6;
-    left: 45px;
-    top: 67%;
-    transform: translateY(-50%);
-    border-radius: 50px;
-}
-
-form .OR::after {
-    position: absolute;
-    content: '';
-    width: 100px;
-    height: 1px;
-    background: #b6b6b6;
-    right: 45px;
-    top: 67%;
-    transform: translateY(-50%);
-    border-radius: 50px;
-}
-
-.install p {
-    margin-top: 4px;
-}
-
-.footer {
-    position: absolute;
-    text-align: center;
-    left: 125;
-    bottom: -90;
-    height: 24%;
+.footer_content-container {
+    background-color: #fff;
     width: 100%;
-    color: black;
-
-}
-
-.footer2 {
     position: absolute;
-    text-align: center;
-    left: 134;
-    bottom: -114;
-    height: 24%;
-    width: 100%;
-    color: black;
-
+    left: 0;
+    bottom: 0;
+    padding: 0 400px;
+    height: 20%;
 }
 
-.footer3 {
-    position: absolute;
-    text-align: center;
-    left: 134;
-    bottom: -148;
-    height: 24%;
-    width: 100%;
+#language-button {
+    background-color: #f5f6f7;
+    border-color: #ccd0d5;
+    padding: 0 8px;
+    font-weight: 500;
+    font-size: 18px;
     color: black;
-
+    border: 1px solid rgb(204, 208, 213);
+    transition: 250ms ease;
 }
 
-ul {
-    margin-top: 15px;
-    font-family: sans-serif;
-    font-size: 12px;
+#language-button:hover {
+    background-color: #ebedf0;
+    text-decoration: none;
+}
+
+.pagination_list {
+    padding-top: 20px;
+    border-top: 1px solid #DDDFE2;
+    display: flex;
+    flex-wrap: wrap;
     list-style: none;
-    margin-right: 330px;
-    color: rgb(140, 141, 145);
+    gap: 15px;
+    font-size: 12px;
+    color: #8A8D91;
+    text-decoration: none;
 }
 
-li {
-
-    display: inline;
-    color: rgb(140, 141, 145);
-    padding: 4px;
-    margin-bottom: 5px;
+.pagination_list>li>a:hover {
+    text-decoration: underline
 }
 
-input:focus::placeholder {
-    position: absolute;
-    font-size: 11px;
-    transform: translateY(-10px);
+.copyright-container {
+    font-size: 12px;
+    margin-top: 15px;
+    color: #737373;
 }
