--- a/week 2/microsoft/style.css
+++ b/week 2/microsoft/style.css
@@ -30,7 +30,9 @@ a{
     width: 95%;
     height: 500px;
     background-color: aqua;
-    
+    position:absolute;
+    bottom: 0px;
+
     
     background:url(https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RWLAmj?ver=35aa&q=0&m=8&h=472&w=1259&b=%23FFFFFFFF&l=f&x=0&y=0&s=1898&d=712&aim=true);
     background-repeat: no-repeat;
@@ -42,7 +44,7 @@ a{
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
-    position: relative;
+    position: absolute;
     top:22%;
     left:6%;
 
@@ -62,6 +64,7 @@ h2{
 }
 a.textmain:hover{
     border-bottom: 2px solid black;
+    position:absolute;
 }
 a:active{
     padding: 10px;
@@ -101,12 +104,16 @@ select:active{
 }
 .extra1,.extra2,.extra3,.extra4{
     width: 22%;
+    margin-top: 15px;
+    position:relative;
+  
 
 
 }
 .extra2,.extra3,.extra4{
     width: 22%;
     margin-left: 43px;
+    vertical-align: top;
 
 
 }
